--- a/main.html
+++ b/main.html
@@ -10,6 +10,17 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<ol>
+		<li data="shoppingList">car</li>
+		<li data="shoppingList">phone</li>
+		<li data="shoppingList">house</li>
+	</ol>
+	
+	<ul>
+		<li data="holidayList">delhi</li>
+		<li data="holidayList">patna</li>
+		<li data="holidayList">kolkata</li>
+	</ul>
 
 </body>
 
