--- a/main.html
+++ b/main.html
@@ -8,19 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<ol>
+		<li data="shoppingList">i phone</li>
+		<li data="shoppingList">i phone</li>
+		<li data="shoppingList">i phone</li>
+	</ol>
+	<ul>
+		<li data-*holidayList>khatu</li>
+		<li data-*holidayList>khatu</li>
+		<li data-*holidayList>khatu</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
-	<ol>
-		<li data="shoppingList">car</li>
-		<li data="shoppingList">phone</li>
-		<li data="shoppingList">house</li>
-	</ol>
-	
-	<ul>
-		<li data="holidayList">delhi</li>
-		<li data="holidayList">patna</li>
-		<li data="holidayList">kolkata</li>
-	</ul>
 
 </body>
 
