--- a/main.html
+++ b/main.html
@@ -10,14 +10,14 @@
 	<!-- the entire body must be written by student -->
 
 	<ol>
-		<li data="shoppingList">i phone</li>
-		<li data="shoppingList">i phone</li>
-		<li data="shoppingList">i phone</li>
+		<li data-ns-test="shoppingList">car</li>
+		<li data-ns-test="shoppingList">house</li>
+		<li data-ns-test="shoppingList">i phone</li>
 	</ol>
 	<ul>
-		<li data-*holidayList>khatu</li>
-		<li data-*holidayList>khatu</li>
-		<li data-*holidayList>khatu</li>
+		<li data-ns-test="holidayList">delhi</li>
+		<li data-ns-test="holidayList">kolkata</li>
+		<li data-ns-test="holidayList">patna</li>
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
